@@ -1,4 +1,5 @@
 FROM openjdk:8-jdk-alpine
+ARG JAVA_TOOLS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
 VOLUME /tmp
 ARG EXTRACTED=/target/extracted
 COPY ${EXTRACTED}/dependencies/ ./
@@ -6,4 +7,4 @@ COPY ${EXTRACTED}/spring-boot-loader/ ./
 COPY ${EXTRACTED}/snapshot-dependencies/ ./
 COPY ${EXTRACTED}/application/ ./
 EXPOSE 8080:8080
-ENTRYPOINT ["java","org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java $JAVA_TOOLS","org.springframework.boot.loader.JarLauncher"]
